add ambiance menu

--- a/src/components/Ambiances.module.scss
+++ b/src/components/Ambiances.module.scss
@@ -1,10 +1,11 @@
-.audioList {
+.ambiancesList {
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(3, 1fr);
+
+
 }
 
-header {
-  align-items: center;
-  display: flex;
+.selected {
+  background-color: var(--light-blue);
 }
