--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -26,6 +26,7 @@
   --green: rgba(89, 227, 145, 1);
   --blue: rgba(80, 53, 255, 1);
   --light-blue: rgba(46, 217, 255, 0.9);
+  --dark: #1a1a1a;
 }
 
 a {
@@ -40,7 +41,9 @@ a {
 
 body {
   align-items: center;
-  background: rgba(11, 36, 52, 1);
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+
   display: flex;
   font-family: 'Karla', sans-serif;
   justify-content: center;
@@ -68,30 +71,33 @@ h1 {
 }
 
 button {
-  background-color: #1a1a1a;
+  background-color: rgba(black, .4);
   border: 1px solid transparent;
   border-radius: 8px;
   cursor: pointer;
+  display: inline-flex;
   font-family: inherit;
-  font-size: 1em;
+  font-size: 1.5rem;
   font-weight: 500;
   padding: 0.6em 1.2em;
   transition: border-color 0.25s;
 
   &:hover {
-    border-color: #646cff;
+    background-color: rgba(black, .8);
   }
 
-  &:focus,
-  &:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-  }
+
 }
 
 .button-toggle {
   &.fade {
     opacity: .5;
   }
+}
+
+.button-play-pause {
+  border-radius: 12rem;
+  padding: .2rem;
 }
 
 @media (prefers-color-scheme: light) {
