--- a/src/components/Audio.module.scss
+++ b/src/components/Audio.module.scss
@@ -1,24 +1,25 @@
 $green: #A3CD99;
 $darkgreen: #579E81;
-$heightSlider: .5rem;
+$heightSlider: .25rem;
 
 .slider {
-  margin: 1rem auto;
+  margin: .25rem auto;
 }
 
 input[type='range'] {
   -webkit-appearance: none;
   background: grey;
-  background-image: linear-gradient($darkgreen, $darkgreen);
+  background-image: linear-gradient(white, white);
   background-repeat: no-repeat;
   border-radius: 5px;
   height: $heightSlider;
+  width: 100%;
 }
 
 input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
-  background: $green;
-  border-radius: 50%;
+  background: white;
+  border-radius: 1rem;
   box-shadow: 0 0 2px 0 #555;
   cursor: pointer;
   height: $heightSlider;
@@ -33,12 +34,12 @@ input[type="range"]::-webkit-slider-runnable-track {
   box-shadow: none;
 }
 
-input[type="range"]::-webkit-slider-thumb:hover {
-  box-shadow: rgba($darkgreen, .5) 0px 0px 0px 4px;
+input[type="range"]:hover::-webkit-slider-thumb {
+  box-shadow: rgba(white, .5) 0px 0px 0px 4px;
 }
 
 input[type="range"]::-webkit-slider-thumb:active {
-  box-shadow: rgba($darkgreen, .8) 0px 0px 0px 8px;
+  box-shadow: rgba(white, .8) 0px 0px 0px 8px;
   transition: box-shadow 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, left 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, bottom 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
