--- a/src/components/Ambiance.module.scss
+++ b/src/components/Ambiance.module.scss
@@ -2,30 +2,42 @@
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(3, 1fr);
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 2rem;
-
-  .controls {
-    align-items: center;
-    display: flex;
-    gap: 1rem;
-
-    .button-toggle {
-      font-size: 3rem;
-    }
-  }
+  padding: 1rem;
 }
 
 .ambiance {
   background-color: rgba(#333, .8);
   border-radius: 0 0 2rem 2rem;
-  padding: 1rem;
 
-  h2 {
-    margin: 0;
+  header {
+    background: rgba(black, .3);
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+
+    .title {
+      align-items: center;
+      display: flex;
+      font-size: 1rem;
+      margin: 0;
+
+      span {
+        font-size: 2rem;
+      }
+    }
+
+    .controls {
+      align-items: center;
+      display: flex;
+      gap: 1rem;
+
+      .button-toggle {
+        font-size: 3rem;
+      }
+
+      input {
+        width: 3rem;
+      }
+    }
   }
 }
