--- a/src/components/Audio.module.scss
+++ b/src/components/Audio.module.scss
@@ -13,7 +13,7 @@ input[type='range'] {
   background-repeat: no-repeat;
   border-radius: 5px;
   height: $heightSlider;
-  width: 100%;
+  width: 3rem;
 }
 
 input[type='range']::-webkit-slider-thumb {
